Digital/objects/DGTL_Access_Management__c.object
<CustomObject>
    <description>This object is used to control access level of user on DIGITAL Application/objects/fields/pages</description>
    <label>Access Management</label>
    <nameField>
        <displayFormat>ACMG-{000000}</displayFormat>
        <label>DGTL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Brands__c</fullName>
        <inlineHelpText>Select the brand from the drop down: E.g. VS, PINK, Beauty, Marketplace</inlineHelpText>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DGTL_Brands</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buttons__c</fullName>
        <label>Buttons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button__c</fullName>
        <label>Button</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create AB Test</fullName>
                </value>
                <value>
                    <fullName>Add from Existing  Layout</fullName>
                </value>
                <value>
                    <fullName>Create Library</fullName>
                </value>
                <value>
                    <fullName>Cascade</fullName>
                </value>
                <value>
                    <fullName>Switch view</fullName>
                </value>
                <value>
                    <fullName>Clone</fullName>
                </value>
                <value>
                    <fullName>Comment - Layout</fullName>
                </value>
                <value>
                    <fullName>Comment - Content</fullName>
                </value>
                <value>
                    <fullName>Delete - Layout</fullName>
                </value>
                <value>
                    <fullName>History - Content</fullName>
                </value>
                <value>
                    <fullName>More Buttons</fullName>
                </value>
                <value>
                    <fullName>Next</fullName>
                </value>
                <value>
                    <fullName>Delete - Content</fullName>
                </value>
                <value>
                    <fullName>Create Takedown</fullName>
                </value>
                <value>
                    <fullName>Update Content</fullName>
                </value>
                <value>
                    <fullName>Add KOD</fullName>
                </value>
                <value>
                    <fullName>Create - Layout</fullName>
                </value>
                <value>
                    <fullName>Delete - Placements</fullName>
                </value>
                <value>
                    <fullName>Content - Resequence</fullName>
                </value>
                <value>
                    <fullName>Show Notification</fullName>
                </value>
                <value>
                    <fullName>Create Contingency</fullName>
                </value>
                <value>
                    <fullName>Create - Tickets</fullName>
                </value>
                <value>
                    <fullName>ABTEST</fullName>
                    <isActive>false</isActive>
                    <label>ABTEST</label>
                </value>
                <value>
                    <fullName>ADDTOLAYOUT</fullName>
                    <isActive>false</isActive>
                    <label>ADDTOLAYOUT</label>
                </value>
                <value>
                    <fullName>ADDTOLIBRARY</fullName>
                    <isActive>false</isActive>
                    <label>ADDTOLIBRARY</label>
                </value>
                <value>
                    <fullName>Add from Existing Layout</fullName>
                    <isActive>false</isActive>
                    <label>Add from Existing Layout</label>
                </value>
                <value>
                    <fullName>CHOOSEVIEW</fullName>
                    <isActive>false</isActive>
                    <label>CHOOSEVIEW</label>
                </value>
                <value>
                    <fullName>COMMENT</fullName>
                    <isActive>false</isActive>
                    <label>COMMENT</label>
                </value>
                <value>
                    <fullName>COMMENTLAYOUT</fullName>
                    <isActive>false</isActive>
                    <label>COMMENTLAYOUT</label>
                </value>
                <value>
                    <fullName>DELETELAYOUT</fullName>
                    <isActive>false</isActive>
                    <label>DELETELAYOUT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Panties</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Swim</fullName>
                </value>
                <value>
                    <fullName>Home page</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Bras</fullName>
                </value>
                <value>
                    <fullName>Lingerie</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Lounge</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Tops</fullName>
                </value>
                <value>
                    <fullName>Bottoms</fullName>
                </value>
                <value>
                    <fullName>GRL PWR</fullName>
                </value>
                <value>
                    <fullName>Fragrance</fullName>
                </value>
                <value>
                    <fullName>Bags-and-Accessories</fullName>
                </value>
                <value>
                    <fullName>PINK Beauty</fullName>
                </value>
                <value>
                    <fullName>Trending</fullName>
                </value>
                <value>
                    <fullName>Bra</fullName>
                    <isActive>false</isActive>
                    <label>Bra</label>
                </value>
                <value>
                    <fullName>Category 1</fullName>
                    <isActive>false</isActive>
                    <label>Category 1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chatter_Subscribed_Group__c</fullName>
        <label>Subscribed Chatter Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_To__c</fullName>
        <label>Escalation To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PINK</fullName>
                </value>
                <value>
                    <fullName>VS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freeze_Period__c</fullName>
        <label>Freeze Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Schedule_time__c</fullName>
        <label>Last Schedule time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MiniView_RO_Fields__c</fullName>
        <label>MiniView RO Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Object_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offer_Type__c</fullName>
                    <label>Offer Type</label>
                </value>
                <value>
                    <fullName>Shot_Number__c</fullName>
                    <label>Shot Number</label>
                </value>
                <value>
                    <fullName>Time_Period__c</fullName>
                    <label>Time Period</label>
                </value>
                <value>
                    <fullName>Image__c</fullName>
                    <label>Image</label>
                </value>
                <value>
                    <fullName>AB_Test_Name__c</fullName>
                    <label>AB Test Name</label>
                </value>
                <value>
                    <fullName>Active__c</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>API_Product_Preview_IDs__c</fullName>
                    <label>API Product Information</label>
                </value>
                <value>
                    <fullName>App_Copy__c</fullName>
                    <label>App Copy</label>
                </value>
                <value>
                    <fullName>Approval_Status__c</fullName>
                    <label>Approval Status</label>
                </value>
                <value>
                    <fullName>Brand__c</fullName>
                    <label>Brand</label>
                </value>
                <value>
                    <fullName>Category__c</fullName>
                    <label>Category</label>
                </value>
                <value>
                    <fullName>Collection_Page_Url__c</fullName>
                    <label>Collection Page Url</label>
                </value>
                <value>
                    <fullName>Compared_Placement_Layout__c</fullName>
                    <label>Compared Placement Layout</label>
                </value>
                <value>
                    <fullName>Content_Type__c</fullName>
                    <label>Content Type</label>
                </value>
                <value>
                    <fullName>Copy_Image__c</fullName>
                    <label>Copy</label>
                </value>
                <value>
                    <fullName>Formula_Layout_Type__c</fullName>
                    <label>Formula Layout Type</label>
                </value>
                <value>
                    <fullName>Grouped__c</fullName>
                    <label>Grouped</label>
                </value>
                <value>
                    <fullName>Has_Unapproved__c</fullName>
                    <label>Has Unapproved?</label>
                </value>
                <value>
                    <fullName>Image_Link__c</fullName>
                    <label>Image Link</label>
                </value>
                <value>
                    <fullName>ImagePath__c</fullName>
                    <label>ImagePath</label>
                </value>
                <value>
                    <fullName>IsABTest__c</fullName>
                    <label>IsABTest</label>
                </value>
                <value>
                    <fullName>KOD__c</fullName>
                    <label>KOD</label>
                </value>
                <value>
                    <fullName>Layout_Type__c</fullName>
                    <label>Layout Type</label>
                </value>
                <value>
                    <fullName>Link__c</fullName>
                    <label>Link</label>
                </value>
                <value>
                    <fullName>Next_Placement_Content__c</fullName>
                    <label>Next Placement Content</label>
                </value>
                <value>
                    <fullName>Notes__c</fullName>
                    <label>Notes</label>
                </value>
                <value>
                    <fullName>Page_Name__c</fullName>
                    <label>Page Name</label>
                </value>
                <value>
                    <fullName>Placement_Page_Type__c</fullName>
                    <label>Page Type</label>
                </value>
                <value>
                    <fullName>Parent_Content__c</fullName>
                    <label>Parent Content</label>
                </value>
                <value>
                    <fullName>Parent_Content_Name__c</fullName>
                    <label>Parent Content Name</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Placement_Content__c</fullName>
                    <label>Placement Content</label>
                </value>
                <value>
                    <fullName>Placement_Library__c</fullName>
                    <label>Placement Library</label>
                </value>
                <value>
                    <fullName>Placement_Content_Detail__c</fullName>
                    <label>Placement Content Detail</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Type__c</fullName>
        <inlineHelpText>Select appropriate Home, Landing, Editorials or LTO page type from the drop down, based on what is being built</inlineHelpText>
        <label>Page Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brands__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>DGTL_Page_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purge_Option1__c</fullName>
        <label>Purge Option1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purge_Option2__c</fullName>
        <label>Purge Option2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Read_Only_Fields__c</fullName>
        <label>Read Only Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Object_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                    <label>Record ID</label>
                </value>
                <value>
                    <fullName>Placement_layout__c</fullName>
                    <label>Placement Layout</label>
                </value>
                <value>
                    <fullName>Placement_library__c</fullName>
                    <label>Placement Library</label>
                </value>
                <value>
                    <fullName>Image__c</fullName>
                    <label>Image</label>
                </value>
                <value>
                    <fullName>Link__c</fullName>
                    <label>Link</label>
                </value>
                <value>
                    <fullName>Main_Message__c</fullName>
                    <label>Main Message</label>
                </value>
                <value>
                    <fullName>Offer_Type__c</fullName>
                    <label>Offer Type</label>
                </value>
                <value>
                    <fullName>Page_Name__c</fullName>
                    <label>Page Name</label>
                </value>
                <value>
                    <fullName>Position__c</fullName>
                    <label>Position</label>
                </value>
                <value>
                    <fullName>Projected__c</fullName>
                    <label>Projected</label>
                </value>
                <value>
                    <fullName>Shot_Number__c</fullName>
                    <label>Shot Number</label>
                </value>
                <value>
                    <fullName>Style_Info__c</fullName>
                    <label>Style Info</label>
                </value>
                <value>
                    <fullName>S_No__c</fullName>
                    <label>S No</label>
                </value>
                <value>
                    <fullName>Copy_Image__c</fullName>
                    <label>Copy Image</label>
                </value>
                <value>
                    <fullName>Active__c</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Approval_Status__c</fullName>
                    <label>Approval Status</label>
                </value>
                <value>
                    <fullName>Content_Type__c</fullName>
                    <label>Content Type</label>
                </value>
                <value>
                    <fullName>layout_type__c</fullName>
                    <label>Layout Type</label>
                </value>
                <value>
                    <fullName>theme__c</fullName>
                    <label>Theme</label>
                </value>
                <value>
                    <fullName>textbox_width__c</fullName>
                    <label>Textbox Width</label>
                </value>
                <value>
                    <fullName>textbox_background_color__c</fullName>
                    <label>Textbox Background Color</label>
                </value>
                <value>
                    <fullName>text_box_opacity__c</fullName>
                    <label>Text Box Opacity</label>
                </value>
                <value>
                    <fullName>headline_color__c</fullName>
                    <label>Headline color</label>
                </value>
                <value>
                    <fullName>copy_color__c</fullName>
                    <label>Copy Color</label>
                </value>
                <value>
                    <fullName>imagepath__c</fullName>
                    <label>ImagePath</label>
                </value>
                <value>
                    <fullName>image_link__c</fullName>
                    <label>Image Link</label>
                </value>
                <value>
                    <fullName>image_map_path__c</fullName>
                    <label>Image Map Path</label>
                </value>
                <value>
                    <fullName>cta__c</fullName>
                    <label>CTA</label>
                </value>
                <value>
                    <fullName>details_link__c</fullName>
                    <label>Details Link</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Interval_Time__c</fullName>
        <label>Schedule Interval Time(For Notification)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 mins</fullName>
                </value>
                <value>
                    <fullName>60 mins</fullName>
                </value>
                <value>
                    <fullName>2 hrs</fullName>
                </value>
                <value>
                    <fullName>3 hrs</fullName>
                </value>
                <value>
                    <fullName>4 hrs</fullName>
                </value>
                <value>
                    <fullName>5 hrs</fullName>
                </value>
                <value>
                    <fullName>6 hrs</fullName>
                </value>
                <value>
                    <fullName>7 hrs</fullName>
                </value>
                <value>
                    <fullName>8 hrs</fullName>
                </value>
                <value>
                    <fullName>9 hrs</fullName>
                </value>
                <value>
                    <fullName>10 hrs</fullName>
                </value>
                <value>
                    <fullName>11 hrs</fullName>
                </value>
                <value>
                    <fullName>12 hrs</fullName>
                </value>
                <value>
                    <fullName>13 hrs</fullName>
                </value>
                <value>
                    <fullName>14 hrs</fullName>
                </value>
                <value>
                    <fullName>24 hrs</fullName>
                </value>
                <value>
                    <fullName>1.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>1.5 hrs</label>
                </value>
                <value>
                    <fullName>10.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>10.5 hrs</label>
                </value>
                <value>
                    <fullName>11.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>11.5 hrs</label>
                </value>
                <value>
                    <fullName>12.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>12.5 hrs</label>
                </value>
                <value>
                    <fullName>13.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>13.5 hrs</label>
                </value>
                <value>
                    <fullName>2.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>2.5 hrs</label>
                </value>
                <value>
                    <fullName>3.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>3.5 hrs</label>
                </value>
                <value>
                    <fullName>4.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>4.5 hrs</label>
                </value>
                <value>
                    <fullName>45 mins</fullName>
                    <isActive>false</isActive>
                    <label>45 mins</label>
                </value>
                <value>
                    <fullName>5.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>5.5 hrs</label>
                </value>
                <value>
                    <fullName>6.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>6.5 hrs</label>
                </value>
                <value>
                    <fullName>7.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>7.5 hrs</label>
                </value>
                <value>
                    <fullName>8.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>8.5 hrs</label>
                </value>
                <value>
                    <fullName>9.5 hrs</fullName>
                    <isActive>false</isActive>
                    <label>9.5 hrs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Interval__c</fullName>
        <label>Schedule Interval (For Commerce Service)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <description>Used to provide access to specific Tab</description>
        <label>Tab Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DGTL_Bangalore_Commerce_Services</fullName>
                    <label>Bangalore Commerce Services</label>
                </value>
                <value>
                    <fullName>DGTL_Commerce_Operations</fullName>
                    <label>Commerce Operations</label>
                </value>
                <value>
                    <fullName>DGTL_Copy_Writer</fullName>
                    <label>Copy Writer</label>
                </value>
                <value>
                    <fullName>DGTL_Creative_Design</fullName>
                    <label>Creative Design</label>
                </value>
                <value>
                    <fullName>DGTL_Digital_Producers</fullName>
                    <label>Digital Producers</label>
                </value>
                <value>
                    <fullName>DGTL_Merchandiser</fullName>
                    <label>Merchandiser</label>
                </value>
                <value>
                    <fullName>DGTL_Offer_Management</fullName>
                    <label>Offer Management</label>
                </value>
                <value>
                    <fullName>DGTL_Angelcard</fullName>
                    <label>Angelcard</label>
                </value>
                <value>
                    <fullName>DGTL_Creative_Operations</fullName>
                    <isActive>false</isActive>
                    <label>Creative Operations</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Floorset</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserOrProfileId__c</fullName>
        <label>UserOrProfileId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserOrProfile__c</fullName>
        <label>UserOrProfile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Writable_Fields__c</fullName>
        <label>Writable Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Object_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Placement_layout__c</fullName>
                    <label>Placement layout</label>
                </value>
                <value>
                    <fullName>Placement_library__c</fullName>
                    <label>Placement library</label>
                </value>
                <value>
                    <fullName>Image__c</fullName>
                    <label>Image</label>
                </value>
                <value>
                    <fullName>Link__c</fullName>
                    <label>Link</label>
                </value>
                <value>
                    <fullName>Main_Message__c</fullName>
                    <label>Main Message</label>
                </value>
                <value>
                    <fullName>Offer_Type__c</fullName>
                    <label>Offer Type</label>
                </value>
                <value>
                    <fullName>Page_Name__c</fullName>
                    <label>Page Name</label>
                </value>
                <value>
                    <fullName>Position__c</fullName>
                    <label>Position</label>
                </value>
                <value>
                    <fullName>Projected__c</fullName>
                    <label>Projected</label>
                </value>
                <value>
                    <fullName>Shot_Number__c</fullName>
                    <label>Shot Number</label>
                </value>
                <value>
                    <fullName>Style_Info__c</fullName>
                    <label>Style Info</label>
                </value>
                <value>
                    <fullName>S_No__c</fullName>
                    <label>S No</label>
                </value>
                <value>
                    <fullName>Copy_Image__c</fullName>
                    <label>Copy Image</label>
                </value>
                <value>
                    <fullName>Active__c</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>approval_status__c</fullName>
                    <label>approval status</label>
                </value>
                <value>
                    <fullName>Content_Type__c</fullName>
                    <label>Content Type</label>
                </value>
                <value>
                    <fullName>layout_type__c</fullName>
                    <label>layout type</label>
                </value>
                <value>
                    <fullName>theme__c</fullName>
                    <label>theme</label>
                </value>
                <value>
                    <fullName>textbox_width__c</fullName>
                    <label>textbox width</label>
                </value>
                <value>
                    <fullName>textbox_background_color__c</fullName>
                    <label>textbox background color</label>
                </value>
                <value>
                    <fullName>text_box_opacity__c</fullName>
                    <label>text box opacity</label>
                </value>
                <value>
                    <fullName>headline_color__c</fullName>
                    <label>headline color</label>
                </value>
                <value>
                    <fullName>copy_color__c</fullName>
                    <label>copy color</label>
                </value>
                <value>
                    <fullName>ImagePath__c</fullName>
                    <label>ImagePath</label>
                </value>
                <value>
                    <fullName>image_link__c</fullName>
                    <label>image link</label>
                </value>
                <value>
                    <fullName>image_map_path__c</fullName>
                    <label>image map path</label>
                </value>
                <value>
                    <fullName>cta__c</fullName>
                    <label>cta</label>
                </value>
                <value>
                    <fullName>details_link__c</fullName>
                    <label>details link</label>
                </value>
                <value>
                    <fullName>video_file_path__c</fullName>
                    <label>video file path</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Compare_Setup</fullName>
        <active>true</active>
        <label>Compare Setup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Field_Access</fullName>
        <active>true</active>
        <label>Field Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>Notification</fullName>
        <active>true</active>
        <label>Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Schedule</fullName>
        <active>true</active>
        <label>Schedule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task_Creation</fullName>
        <active>true</active>
        <label>Task Creation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Team_Settings</fullName>
        <active>true</active>
        <label>Team Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>View_Management</fullName>
        <active>true</active>
        <label>View Management</label>
    </recordTypes>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Tab_Name__c</columns>
        <columns>Brands__c</columns>
        <columns>Object_Name__c</columns>
        <columns>UserOrProfileId__c</columns>
        <columns>Team__c</columns>
        <columns>Schedule_Interval_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Compare_Setup</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Brands__c</columns>
        <columns>Read_Only_Fields__c</columns>
        <columns>Writable_Fields__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Access_Management__c.Compare_Setup</value>
        </filters>
        <label>Compare Setup</label>
    </listViews>
    <listViews>
        <fullName>Content_Detail</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Tab_Name__c</columns>
        <columns>Team__c</columns>
        <columns>UserOrProfileId__c</columns>
        <filterScope>Mine</filterScope>
        <label>Content Detail Access</label>
    </listViews>
    <listViews>
        <fullName>Field_Access</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Writable_Fields__c</columns>
        <columns>Read_Only_Fields__c</columns>
        <columns>Brands__c</columns>
        <columns>Tab_Name__c</columns>
        <columns>Team__c</columns>
        <columns>UserOrProfile__c</columns>
        <columns>UserOrProfileId__c</columns>
        <filterScope>Everything</filterScope>
        <label>Field Access</label>
    </listViews>
</CustomObject>